--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       <h1>Browse Our Delicious Meals</h1>
       <section id="latest-products">
         <ul>
-          <li class="food-items">
+          <li class="food-item">
             <article>
               <img src="/images/risotto.jpg" alt="Risotto with Tiger Prawns" />
               <div class="food-item-content">
                 <h2>Risotto with Tiger Prawns</h2>
-                <a href="">Add to Cart</a>
+                <a href="" class="btn">Add to Cart</a>
               </div>
             </article>
           </li>
-          <li class="food-items">
+          <li class="food-item">
             <article>
               <img src="/images/cheeseburgers.jpg" alt="Cheeseburgers" />
               <div class="food-item-content">
                 <h2>Cheeseburgers</h2>
-                <a href="">Add to Cart</a>
+                <a href="" class="btn">Add to Cart</a>
               </div>
             </article>
           </li>
